--- a/deployment/k8s/deployment.yaml
+++ b/deployment/k8s/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: netflix-app
-        image: prabhusairam/netflix:1
+        image: prabhusairam/netflix:v1
         ports:
         - containerPort: 80
 ---
